# boost-switch

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/architecture/: overview.md  solution-options-analysis.md
docs/operations/: same-config-migration.md  troubleshooting.md  ubuntu-24-install.md  uninstall.md
gnome-extension/: README.md  extension.js  metadata.json  prefs.js
gnome-extension/schemas/: org.gnome.shell.extensions.boost-switch.gschema.xml
gnome-extension/src/: extension.js  prefs.js
gnome-extension/tests/: test-errors.js  test-presenter.js  test-state.js
scripts/dev/: README.md  scan_public_sync_guard.py
scripts/install/: README.md  install_local.sh  uninstall_local.sh
scripts/verify/: README.md  verify_host_integration.sh  verify_simulated.sh
shared/contracts/: README.md  io.github.ge777777.BoostSwitch1.xml
shared/examples/: README.md  diagnostics-group-missing.json  status-disabled.json  status-enabled.json
shared/schemas/: README.md  diagnostics.schema.json  status.schema.json
src/boost_switch/: contracts.py  errors.py  sysfs.py
system/dbus/: README.md  io.github.ge777777.BoostSwitch1.conf
system/polkit/: 50-boost-switch-local.rules.template  README.md  (+1 more)
system/sudoers/: README.md
tests/: test_authz.py  test_cli.py  test_contracts.py  test_docs_sync.py  test_install_scripts.py  test_open_source_readiness.py  test_public_sync_guard.py  test_service_logic.py  test_sysfs.py  test_system_assets.py
tray-app/: README.md
(+15 files in other folders)
